# advanced_ab_test_py

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.py  pyproject.toml
.github/workflows/: black.yml  codeql.yml  linter.yml  tests.yml
docs/: pull_request_template.md
src/: base_fields.py  power_analysis.py  sequential_test.py  stats_func.py
src/fwer/: adjusted_p.py  procedure.py
src/sample_size/analytical/: calculator.py
src/sample_size/simulation/: calculator.py
src/seq_design/: boundary.py  spend_func.py
tests/: example_test.py
util/: data_cls_func.py  stdout.py
